cluster/apps/stac/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stac
  namespace: stac
spec:
  selector:
    app: stac
  ports:
    - port: 3000
