cluster/apps/stac/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stac
  namespace: stac
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`test.soulsbros.ch`)
      kind: Rule
      services:
        - name: stac
          port: 80
